# Traveling_Will

./: .gitignore  CMakeLists.txt  LICENSE.md  Makefile  README.md
ansible_deb/: ansible.cfg  hosts  playbook.yml
ansible_deb/roles/basic/tasks/: main.yml
engine/: CMakeLists.txt
engine/kernel/sdl2/: CMakeLists.txt  sdl2kernel.cpp
engine/src/: engine.cpp
inc/: game.h
include/: button.h  collectable.h  cutscene.h  enemy.h  menu.h  platform.h  player.h  traveling_will_game.h  traveling_will_level.h  traveling_will_level_factory.h  traveling_will_playable_level.h  tw_button.h  tw_collectable.h  tw_cutscene.h  tw_enemy.h  tw_game.h  tw_hud.h  tw_level.h  tw_level_factory.h  tw_limbo.h  tw_menu.h  tw_platform.h  tw_playable_level.h  tw_portal.h  tw_portal_to_level.h  tw_progress_bar.h  tw_result.h  tw_save.h  tw_tutorial.h  tw_will.h  will.h
libs/: kernel.so.0.1.0
packaging/: Vagrantfile
packaging/.vagrant/machines/default/virtualbox/: action_provision  action_set_name  id  index_uuid  private_key  synced_folders
res/: generate_save.cpp  level_design_parser.py
res/1/: level_design.txt  level_design_2.txt
res/2/: level_design.txt  level_design.txt~
res/3/: level_design.txt
res/4/: level_design.txt
res/5/: level_design.txt
res/6/: level_design.txt
res/midi/: florest.ly  ly2level.cpp
res/parser/: Makefile  ceu.ly  florest.ly  florest.midi  gba-parser.cpp  level_design.txt  ly2level.cpp  normalizer.cpp  pre_parser.cpp  prog  smoother.cpp  sound_parser.cpp  test_design.cpp
res/parser/lilyponds/: 2.ly  3.ly  4.ly  6.ly
src/: button.cpp  collectable.cpp  cutscene.cpp  enemy.cpp  game.cpp  main.cpp  menu.cpp  platform.cpp  player.cpp  traveling_will_game.cpp  traveling_will_level.cpp  traveling_will_level_factory.cpp  traveling_will_playable_level.cpp  tw_button.cpp  tw_collectable.cpp  tw_collectable_status.cpp  tw_cutscene.cpp  tw_enemy.cpp  tw_game.cpp  tw_hud.cpp  tw_level_factory.cpp  tw_limbo.cpp  tw_main.cpp  tw_menu.cpp  tw_platform.cpp  tw_playable_level.cpp  tw_portal.cpp  tw_portal_to_level.cpp  tw_progress_bar.cpp  tw_result.cpp  tw_save.cpp  tw_tutorial.cpp  tw_will.cpp  will.cpp
traveling_will/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake
traveling_will/engine/: CMakeLists.txt  Makefile
traveling_will/engine/kernel/sdl2/: CMakeLists.txt  kernel.so.0.1.0
traveling_will/engine/src/: engine.cpp
traveling_will/include/: tw_button.h  tw_collectable_status.h  tw_enemy.h  tw_game.h  tw_hud.h  tw_level.h  tw_menu.h  tw_platform.h  tw_portal.h  tw_portal_to_level.h  tw_will.h
traveling_will/libs/: kernel.so.0.1.0
traveling_will/res/: generate_save.cpp
traveling_will/res/2/: level_design.txt
traveling_will/res/3/: level_design.txt
traveling_will/res/parser/: ly2level.cpp
traveling_will/res/parser/lilyponds/: 1.ly  5.ly
traveling_will/src/: tw_collectable_status.cpp  tw_cutscene.cpp  tw_enemy.cpp  tw_game.cpp  tw_level_factory.cpp  tw_menu.cpp  tw_playable_level.cpp  tw_portal.cpp  tw_result.cpp  tw_save.cpp  tw_will.cpp
